--- a/apps/blog/templates/blog/tags/article_list.html
+++ b/apps/blog/templates/blog/tags/article_list.html
@@ -10,9 +10,8 @@
         </div>
         <div class="media-body">
             <div class="text-muted mb-2 f-12">
-                <span><img class="rounded-circle mr-1 avatar"
-                           src="http://www.stopfollow.com/media/avatar/timg_wX5F4n5.jpg"
-                           alt="{% get_show_name article.author %}">{% get_show_name article.author %}</span>
+                {% get_user_avatar_tag article.author %}
+                <span>{% get_show_name article.author %}</span>
                 <span><i class="fa fa-calendar-times-o ml-2 mr-1"></i>{{ article.create_date|naturaltime}}</span>
             </div>
             <h2 class="mt-0 font-weight-bold text-info f-16">
@@ -21,7 +20,7 @@
             <p class="d-none d-sm-block mb-2 f-15">{{ article.summary|truncatechars:130 }}</p>
             <p class="d-block d-sm-none mb-2 f-15">{{ article.summary|truncatechars:64 }}</p>
             <div class="text-muted mb-0 f-12">
-                <a href="{{ article.category.get_absolute_url }}" title="查看当前分类下更多文章">
+                <a class="cate" href="{{ article.category.get_absolute_url }}" title="查看当前分类下更多文章">
                     <i class="fa fa-book mr-1"></i>{{ article.category }}</a>
                 <span><i class="fa fa-eye ml-2 mr-1"></i>{{ article.views }}</span>
                 <a href="{{ article.get_absolute_url }}#comment-block" target="_blank" title="查看文章评论">
