--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -10,22 +10,18 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item mr-2">
-                <a class="nav-link py-md-3" href="{% url 'blog:index' %}"><i class="fa fa-home mr-1"></i>首页<span class="sr-only">(current)</span></a>
+                {% url 'blog:index' as index_url %}
+                <a class="nav-link py-md-3 {% if request.path == index_url %}active{% endif %}" href="{{ index_url }}"><i class="fa fa-home mr-1"></i>首页<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item mr-2">
                 <a class="nav-link py-md-3" href="#"><i class="fa fa-sitemap mr-1"></i>归档</a>
             </li>
-            <li class="nav-item mr-2 dropdown">
-                <a class="nav-link dropdown-toggle py-md-3" href="#" id="navbarDropdown" role="button"
-                   data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false"><i class="fa fa-gavel mr-1"></i>在线工具</a>
-                <div class="dropdown-menu mt-0 rounded-0 border-0" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item px-3" href="#">百度主动推送</a>
-                    <a class="dropdown-item px-3" href="#">友链检测</a>
-                </div>
+            <li class="nav-item mr-2">
+                <a class="nav-link py-md-3" href="#"><i class="fa fa-gavel mr-1"></i>在线工具</a>
             </li>
             <li class="nav-item mr-2 ">
-                <a class="nav-link py-md-3" href="{% url 'blog:about' %}"><i class="fa fa-anchor mr-1"></i>关于</a>
+                {% url 'blog:about' as about_url %}
+                <a class="nav-link py-md-3 {% if request.path == about_url %}active{% endif %}" href="{{ about_url }}"><i class="fa fa-anchor mr-1"></i>关于</a>
             </li>
             <form class="nav-item navbar-form mr-2 py-md-2" role="search" method="get" id="searchform" action="{% url 'blog:search_view'%}">
                 <div class="input-group">
@@ -45,16 +41,16 @@
                     {% get_user_avatar_tag user %}
                 </a>
                 <div class="dropdown-menu dropdown-menu-right mt-0 rounded-0 border-0" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="{% url 'oauth:profile' %}"><i class="fa fa-fw fa-user text-info mr-2"></i>个人资料</a>
+                    <a class="dropdown-item pl-3" href="{% url 'oauth:profile' %}"><i class="fa fa-fw fa-user text-info mr-2"></i>个人资料</a>
                     {% if user.is_staff %}
-                    <a class="dropdown-item" href="{% url 'admin:index' %}"><i
+                    <a class="dropdown-item pl-3" href="{% url 'admin:index' %}"><i
                             class="fa fa-fw fa-key text-info mr-2"></i>后台管理</a>
                     {% endif %}
-                    <a class="dropdown-item" href="#"><i class="fa fa-fw fa-bookmark text-info mr-2"></i>我的收藏</a>
-                    <a class="dropdown-item" href="#"><i class="fa fa-fw fa-bell text-info mr-2"></i>消息
+                    <a class="dropdown-item pl-3" href="#"><i class="fa fa-fw fa-bookmark text-info mr-2"></i>我的收藏</a>
+                    <a class="dropdown-item pl-3" href="#"><i class="fa fa-fw fa-bell text-info mr-2"></i>消息
                         <span class="badge badge-warning ml-3 text-center">19</span>
                     </a>
-                    <a class="dropdown-item" href="{% url 'account_logout' %}"><i
+                    <a class="dropdown-item pl-3" href="{% url 'account_logout' %}"><i
                             class="fa fa-fw fa-sign-out text-info mr-2"></i>退出</a>
                 </div>
             </li>
