--- a/apps/blog/static/blog/css/detail.css
+++ b/apps/blog/static/blog/css/detail.css
@@ -59,7 +59,7 @@
 .toc > ul > li > ul > li {
     list-style-type: decimal;
 }
-.toc > ul > li > ul > li:hover {
+.toc a:hover {
     color: #ff6900;
 }
 
