--- a/apps/tool/templates/tool/tool.html
+++ b/apps/tool/templates/tool/tool.html
@@ -9,50 +9,71 @@
 <meta name="keywords" content="在线工具,SEO工具,站长工具,爬虫工具">
 {% endblock %}
 
+
+{% block top-file %}
+<link href="{% static 'tool/css/tool.css' %}?v=20180107.058" rel="stylesheet">
+{% endblock %}
+
 {% block base_content %}
 <div class="container">
     <div class="row">
-        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-1 mb-3">
+        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
             <div class="card">
-                <div class="card-header p-1">
-                    <img class="w-25" src="http://cdn.stopfollow.com/010/SEO.jpg" alt="Card image cap">
+                <div class="card-header p-2 tool-header">
+                    <a href="{% url 'tool:baidu_push' %}">
+                        <img class="w-25 float-left mr-2 rounded" src="http://127.0.0.1:8000/media/avatar/default.png"
+                             alt="百度主动推送工具">
+                        <h2 class="card-title">百度主动推送工具</h2>
+                    </a>
+                    <p class="mb-0">[站长工具]</p>
                 </div>
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                <div class="card-body p-3 tool-des">
+                    <p class="card-text">调用百度站长提供的主动推送api批量推送链接，实现高效推送，提升网站收录效率</p>
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-1 mb-3">
+        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
             <div class="card">
-                <div class="card-header p-1">
-                    <img class="w-25" src="http://cdn.stopfollow.com/010/SEO.jpg" alt="Card image cap">
+                <div class="card-header p-2 tool-header">
+                    <a href="{% url 'tool:baidu_push' %}">
+                        <img class="w-25 float-left mr-2 rounded" src="http://127.0.0.1:8000/media/avatar/default.png"
+                             alt="百度主动推送工具">
+                        <h2 class="card-title">百度主动推送工具</h2>
+                    </a>
+                    <p class="mb-0">[站长工具]</p>
                 </div>
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                <div class="card-body p-3 tool-des">
+                    <p class="card-text">调用百度站长提供的主动推送api批量推送链接，实现高效推送，提升网站收录效率</p>
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-1 mb-3">
+        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
             <div class="card">
-                <div class="card-header p-1">
-                    <img class="w-25" src="http://cdn.stopfollow.com/010/SEO.jpg" alt="Card image cap">
+                <div class="card-header p-2 tool-header">
+                    <a href="{% url 'tool:baidu_push' %}">
+                        <img class="w-25 float-left mr-2 rounded" src="http://127.0.0.1:8000/media/avatar/default.png"
+                             alt="百度主动推送工具">
+                        <h2 class="card-title">百度主动推送工具</h2>
+                    </a>
+                    <p class="mb-0">[站长工具]</p>
                 </div>
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                <div class="card-body p-3 tool-des">
+                    <p class="card-text">调用百度站长提供的主动推送api批量推送链接，实现高效推送，提升网站收录效率</p>
                 </div>
             </div>
         </div>
-        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-1 mb-3">
+        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
             <div class="card">
-                <div class="card-header p-1">
-                    <img class="w-25" src="http://127.0.0.1:8000/media/avatar/default.png" alt="Card image cap">
+                <div class="card-header p-2 tool-header">
+                    <a href="{% url 'tool:baidu_push' %}">
+                        <img class="w-25 float-left mr-2 rounded" src="http://127.0.0.1:8000/media/avatar/default.png"
+                             alt="百度主动推送工具">
+                        <h2 class="card-title">百度主动推送工具</h2>
+                    </a>
+                    <p class="mb-0">[站长工具]</p>
                 </div>
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                <div class="card-body p-3 tool-des">
+                    <p class="card-text">调用百度站长提供的主动推送api批量推送链接，实现高效推送，提升网站收录效率</p>
                 </div>
             </div>
         </div>
