--- a/apps/tool/static/tool/css/tool.css
+++ b/apps/tool/static/tool/css/tool.css
@@ -7,3 +7,19 @@
 .tool-des p {
     line-height: 2;
 }
+.title-info {
+    border-left: 4px solid #17a2b8;
+}
+pre {
+    border: none;
+    background-color: #e4eaef;
+    border-radius: 3px;
+    font-size: 85%;
+    padding: .5rem;
+}
+
+@media (min-width: 1200px) {
+.tool-list .card:hover {
+    box-shadow:0 3px 9px rgba(0, 0, 0, 0.275)
+}
+}
