--- a/apps/tool/templates/tool/tool.html
+++ b/apps/tool/templates/tool/tool.html
@@ -3,32 +3,47 @@
 {% load humanize %}
 {% load blog_tags %}
 
-{% block head_title %}在线工具 - 原创在线工具{% endblock %}
+{% block head_title %}在线工具，提升工作效率{% endblock %}
 {% block metas %}
-<meta name="description" content="在线工具，由博主使用Python等编程语言原创的一些小工具集合，用于解决一些常见的办公问题，提高工作效率">
+<meta name="description" content="在线工具，提供站长工具包括百度主动推送工具、友链检测、正则表达式工具等，方便进行批量操作，提高工作效率，工具持续增加中">
 <meta name="keywords" content="在线工具,SEO工具,站长工具,爬虫工具">
 {% endblock %}
 
 
 {% block top-file %}
-<link href="{% static 'tool/css/tool.css' %}?v=20180107.058" rel="stylesheet">
+<link href="{% static 'tool/css/tool.css' %}?v=20180107.088" rel="stylesheet">
 {% endblock %}
 
 {% block base_content %}
 <div class="container">
-    <div class="row">
+    <div class="row tool-list">
         <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
             <div class="card">
                 <div class="card-header p-2 tool-header">
                     <a href="{% url 'tool:baidu_push' %}">
-                        <img class="w-25 float-left mr-2 rounded" src="http://127.0.0.1:8000/media/avatar/default.png"
+                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/baidu.png"
                              alt="百度主动推送工具">
                         <h2 class="card-title">百度主动推送工具</h2>
                     </a>
                     <p class="mb-0">[站长工具]</p>
                 </div>
                 <div class="card-body p-3 tool-des">
-                    <p class="card-text">调用百度站长提供的主动推送api批量推送链接，实现高效推送，提升网站收录效率</p>
+                    <p class="card-text">调用百度站长提供的主动推送api批量推送链接，提升网站收录效率，老站必备</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
+            <div class="card">
+                <div class="card-header p-2 tool-header">
+                    <a href="{% url 'tool:baidu_push_site' %}">
+                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/map.png"
+                             alt="Sitemap主动推送">
+                        <h2 class="card-title">Sitemap主动推送</h2>
+                    </a>
+                    <p class="mb-0">[站长工具]</p>
+                </div>
+                <div class="card-body p-3 tool-des">
+                    <p class="card-text">提取sitemap页面所有链接，调用百度站长官方api，主动批量推送网站链接，新站必备</p>
                 </div>
             </div>
         </div>
@@ -36,44 +51,29 @@
             <div class="card">
                 <div class="card-header p-2 tool-header">
                     <a href="{% url 'tool:baidu_push' %}">
-                        <img class="w-25 float-left mr-2 rounded" src="http://127.0.0.1:8000/media/avatar/default.png"
+                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/baidu.png"
                              alt="百度主动推送工具">
                         <h2 class="card-title">百度主动推送工具</h2>
                     </a>
                     <p class="mb-0">[站长工具]</p>
                 </div>
                 <div class="card-body p-3 tool-des">
-                    <p class="card-text">调用百度站长提供的主动推送api批量推送链接，实现高效推送，提升网站收录效率</p>
+                    <p class="card-text">调用百度站长提供的主动推送api批量推送链接，提升网站收录效率，老站必备</p>
                 </div>
             </div>
         </div>
         <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
             <div class="card">
                 <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:baidu_push' %}">
-                        <img class="w-25 float-left mr-2 rounded" src="http://127.0.0.1:8000/media/avatar/default.png"
-                             alt="百度主动推送工具">
-                        <h2 class="card-title">百度主动推送工具</h2>
+                    <a href="{% url 'tool:baidu_push_site' %}">
+                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/map.png"
+                             alt="Sitemap主动推送">
+                        <h2 class="card-title">Sitemap主动推送</h2>
                     </a>
                     <p class="mb-0">[站长工具]</p>
                 </div>
                 <div class="card-body p-3 tool-des">
-                    <p class="card-text">调用百度站长提供的主动推送api批量推送链接，实现高效推送，提升网站收录效率</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
-            <div class="card">
-                <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:baidu_push' %}">
-                        <img class="w-25 float-left mr-2 rounded" src="http://127.0.0.1:8000/media/avatar/default.png"
-                             alt="百度主动推送工具">
-                        <h2 class="card-title">百度主动推送工具</h2>
-                    </a>
-                    <p class="mb-0">[站长工具]</p>
-                </div>
-                <div class="card-body p-3 tool-des">
-                    <p class="card-text">调用百度站长提供的主动推送api批量推送链接，实现高效推送，提升网站收录效率</p>
+                    <p class="card-text">提取sitemap页面所有链接，调用百度站长官方api，主动批量推送网站链接，新站必备</p>
                 </div>
             </div>
         </div>
