--- a/apps/blog/static/blog/css/timeline.css
+++ b/apps/blog/static/blog/css/timeline.css
@@ -79,7 +79,7 @@
     color: #fff;
     width: 50px;
     height: 50px;
-    line-height: 50px;
+    line-height: 40px;
     font-size: 1.4em;
     text-align: center;
     position: absolute;
@@ -88,10 +88,8 @@
     margin-left: -25px;
     background-color: #999999;
     z-index: 100;
-    border-top-right-radius: 50%;
-    border-top-left-radius: 50%;
-    border-bottom-right-radius: 50%;
-    border-bottom-left-radius: 50%;
+    border-radius: 50%;
+    border: 3px solid #fff;
 }
 
 .timeline > li.timeline-inverted > .timeline-panel {
@@ -117,7 +115,7 @@
 }
 
 .timeline-badge.success {
-    background-color: #3f903f !important;
+    background-color: #20c997 !important;
 }
 
 .timeline-badge.warning {
@@ -191,7 +189,7 @@
     background:#fff;
 }
 .timeline {
-    border-top: 1px solid #fff;
+    border-top: 2px solid #fff;
 }
 .timeline-body ul {
     padding-left:20px;
