--- a/apps/tool/templates/tool/bd_push_site.html
+++ b/apps/tool/templates/tool/bd_push_site.html
@@ -1,10 +1,10 @@
 {% extends "tool/base_tool.html" %}
 {% load static %}
 
-{% block head_title %}sitemap主动推送，百度主动推送工具升级版_站长工具{% endblock %}
+{% block head_title %}Sitemap主动推送，百度主动推送工具升级版，加快网站内容抓取_站长工具{% endblock %}
 {% block metas %}
-<meta name="description" content="Sitemap主动推送是百度主动推送工具的升级版，是一个在线推送链接工具，这个工具提取网站sitemap中所有链接，然后调用百度站长平台提供的API接口，批量推送链接，提高网站收录速度和效率。">
-<meta name="keywords" content="百度主动推送,站长工具,在线工具,sitemap链接推送">
+<meta name="description" content="Sitemap主动推送是百度主动推送工具的升级版，可以在线实时自动提交链接，首先使用正则表达式批量抓取网站sitemap页面所有链接，然后调用百度站长平台的主动推送接口，批量推送链接，加快抓取速度和百度收录效率。">
+<meta name="keywords" content="百度主动推送,站长工具,在线工具,sitemap,自动提交,百度收录,实时提交">
 {% endblock %}
 
 {% block left_content %}
@@ -23,12 +23,15 @@
     <h3 class="card-title pl-2 title-info">工具说明：</h3>
     <ul>
         <li>这个Sitemap主动推送工具是百度主动推送工具的升级版</li>
-        <li>本工具的作用是提取网站sitemap页面中所有的链接，并且使用百度站长官方提供的API主动推送链接给百度收录，百度主动推送的作用请查看
+        <li>本工具的作用是抓取网站sitemap页面中所有的链接，然后使用百度站长官方提供的推送接口主动推送链接给百度收录，百度主动推送的作用请查看
             <a class="text-info" href="https://ziyuan.baidu.com/linksubmit/index" target="_blank">官方说明</a>
         </li>
         <li>首先将百度站长提供的“接口调用地址”复制到下面表单中，然后将自己网站的sitemap页面的地址复制到对应表单中，点击提交按钮即可看到返回的信息</li>
-        <li>想了解这个工具的原理和查看源代码，可以前往
-            <a class="text-info" href="#" target="_blank">百度主动推送工具</a>，有任何问题都可以到文章底部评论留言
+        <li>想了解这个工具的原理和查看源代码，可以阅读文章
+            <a class="text-info" href="#" target="_blank">百度主动推送工具</a>，有任何问题或建议都可以到文章底部评论留言
+        </li>
+        <li>本工具适合新站或百度收录量比较少的老站使用，对于网站大部分链接已经被百度收录的老站建议使用
+            <a class="text-info" href="{% url 'tool:baidu_push' %}">百度主动推送工具</a> 实时提交新建链接
         </li>
     </ul>
 </div>
@@ -41,17 +44,17 @@
         <small class="form-text text-muted">注：请填写百度站长平台提供给您的接口调用地址</small>
     </div>
     <div class="form-group">
-        <label>sitemap地址：</label>
+        <label>Sitemap地址：</label>
         <input type="url" class="form-control rounded-0" id="form-sitemap"
                placeholder="例：http://www.example.com/sitemap.xml"
                required>
-        <small class="form-text text-muted">注：提交的链接的域名必须与接口中site保持一直才能推送成功</small>
+        <small class="form-text text-muted">注：规范的sitemap网页的链接应该包含在&lt;loc&gt;标签中，否则无法提取到链接</small>
     </div>
     <button type="submit" class="btn btn-info btn-sm" id="start-push">开始推送</button>
 </div>
 <div class="card mb-3 rounded-0">
     <div class="card-header text-center text-info font-weight-bold py-2">推送结果</div>
-    <div class="card-body push-result text-center py-3"></div>
+    <div class="card-body push-result text-center py-3">结果显示区</div>
 </div>
 <h3 class="mb-3 pl-2 title-info">推送结果参数解读：</h3>
 <ul class="nav nav-tabs" id="myTab" role="tablist">
