--- a/apps/tool/templates/tool/tool.html
+++ b/apps/tool/templates/tool/tool.html
@@ -11,7 +11,7 @@
 
 
 {% block top-file %}
-<link href="{% static 'tool/css/tool.css' %}?v=20180107.088" rel="stylesheet">
+<link href="{% static 'tool/css/tool.css' %}?v=20180107.08" rel="stylesheet">
 {% endblock %}
 
 {% block base_content %}
@@ -21,14 +21,14 @@
             <div class="card">
                 <div class="card-header p-2 tool-header">
                     <a href="{% url 'tool:baidu_push' %}">
-                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/baidu.png"
+                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/baidu-2.png"
                              alt="百度主动推送工具">
                         <h2 class="card-title">百度主动推送工具</h2>
                     </a>
                     <p class="mb-0">[站长工具]</p>
                 </div>
                 <div class="card-body p-3 tool-des">
-                    <p class="card-text">调用百度站长提供的主动推送api批量推送链接，提升网站收录效率，老站必备</p>
+                    <p class="card-text">调用百度站长提供的主动推送接口批量提交链接，提升网站收录效率，老站必备</p>
                 </div>
             </div>
         </div>
@@ -43,22 +43,22 @@
                     <p class="mb-0">[站长工具]</p>
                 </div>
                 <div class="card-body p-3 tool-des">
-                    <p class="card-text">提取sitemap页面所有链接，调用百度站长官方api，主动批量推送网站链接，新站必备</p>
+                    <p class="card-text">抓取Sitemap页面所有链接，调用百度主动推送接口，主动批量提交网站链接，新站必备</p>
                 </div>
             </div>
         </div>
         <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
             <div class="card">
                 <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:baidu_push' %}">
-                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/baidu.png"
-                             alt="百度主动推送工具">
-                        <h2 class="card-title">百度主动推送工具</h2>
+                    <a href="{% url 'tool:link_test' %}">
+                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/link-2.png"
+                             alt="友链检测工具">
+                        <h2 class="card-title">友链检测工具</h2>
                     </a>
                     <p class="mb-0">[站长工具]</p>
                 </div>
                 <div class="card-body p-3 tool-des">
-                    <p class="card-text">调用百度站长提供的主动推送api批量推送链接，提升网站收录效率，老站必备</p>
+                    <p class="card-text">批量检查友情链接状态，查看友链的反链有效性，便于站长对无效的友链进行删除和调整</p>
                 </div>
             </div>
         </div>
