添加正则工具

--- a/apps/blog/templates/blog/tags/footer.html
+++ b/apps/blog/templates/blog/tags/footer.html
@@ -3,6 +3,6 @@
         <p class="card-text mb-1">Copyright&nbsp;&copy;&nbsp;2017-2018
             <a href="https://github.com/Hopetree" target="_blank" title="前往博主的Github">Hopetree</a>.&nbsp;Powered&nbsp;by&nbsp;Django.
         </p>
-        <p class="mb-0"><a href="http://www.miibeian.gov.cn/" target="_blank">粤ICP备17114114号</a></p>
+        <p class="mb-0"><a href="http://www.miibeian.gov.cn/" target="_blank">粤ICP备17114114号-2</a></p>
     </div>
 </div>
