--- a/apps/tool/templates/tool/base_tool.html
+++ b/apps/tool/templates/tool/base_tool.html
@@ -11,7 +11,7 @@
         <div class="col-lg-8">
             {% block left_content %}{% endblock %}
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-4 d-none d-lg-block">
             {% include 'blog/tags/base_right.html' %}
         </div>
     </div>
