--- a/apps/blog/static/blog/css/detail.css
+++ b/apps/blog/static/blog/css/detail.css
@@ -19,7 +19,7 @@
     font-weight:600;
     margin: 10px 0 10px 0;
     padding: 0 10px;
-    border-left: 5px solid #1abc9c;
+    border-left: 5px solid #20c997;
     background-color: #f7f7f7;
     line-height: 2em;
 }
