--- a/apps/tool/templates/tool/tool.html
+++ b/apps/tool/templates/tool/tool.html
@@ -65,15 +65,15 @@
         <div class="col-md-6 col-lg-4 col-xl-3 px-lg-2 mb-3">
             <div class="card">
                 <div class="card-header p-2 tool-header">
-                    <a href="{% url 'tool:baidu_push_site' %}">
-                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/map.png"
-                             alt="Sitemap主动推送">
-                        <h2 class="card-title">Sitemap主动推送</h2>
+                    <a href="{% url 'tool:regex' %}">
+                        <img class="w-25 float-left mr-2" src="http://cdn.seoerzone.com/tool/logo/regex.png"
+                             alt="在线正则表达式">
+                        <h2 class="card-title">在线正则表达式</h2>
                     </a>
-                    <p class="mb-0">[站长工具]</p>
+                    <p class="mb-0">[开发工具]</p>
                 </div>
                 <div class="card-body p-3 tool-des">
-                    <p class="card-text">提取sitemap页面所有链接，调用百度站长官方api，主动批量推送网站链接，新站必备</p>
+                    <p class="card-text">正则表达式在线工具，使用正则表达式的规则提取信息，所有语言规则通用</p>
                 </div>
             </div>
         </div>
